# service/organization/api/api.bm.go
@@ -26,13 +26,22 @@ var _ context.Context
 var _ binding.StructValidator
 
 var PathOrganizationSvcPing = "/eagle.organization.v1.OrganizationSvc/Ping"
-var PathOrganizationSvcGetOrganization = "/organization/:organizationId"
+var PathOrganizationSvcGetOrganization = "/organization"
+var PathOrganizationSvcAddOrganization = "/organization"
+var PathOrganizationSvcUpdateOrganization = "/organization"
+var PathOrganizationSvcDeleteOrganization = "/organization"
 
 // OrganizationSvcBMServer is the server API for OrganizationSvc service.
 type OrganizationSvcBMServer interface {
 	Ping(ctx context.Context, req *google_protobuf1.Empty) (resp *google_protobuf1.Empty, err error)
 
-	GetOrganization(ctx context.Context, req *google_protobuf1.Empty) (resp *Organization, err error)
+	GetOrganization(ctx context.Context, req *GetOrgReq) (resp *Organization, err error)
+
+	AddOrganization(ctx context.Context, req *Organization) (resp *google_protobuf1.Empty, err error)
+
+	UpdateOrganization(ctx context.Context, req *Organization) (resp *google_protobuf1.Empty, err error)
+
+	DeleteOrganization(ctx context.Context, req *Organization) (resp *google_protobuf1.Empty, err error)
 }
 
 var OrganizationSvcSvc OrganizationSvcBMServer
@@ -47,7 +56,7 @@ func organizationSvcPing(c *bm.Context) {
 }
 
 func organizationSvcGetOrganization(c *bm.Context) {
-	p := new(google_protobuf1.Empty)
+	p := new(GetOrgReq)
 	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
 		return
 	}
@@ -55,9 +64,39 @@ func organizationSvcGetOrganization(c *bm.Context) {
 	c.JSON(resp, err)
 }
 
+func organizationSvcAddOrganization(c *bm.Context) {
+	p := new(Organization)
+	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
+		return
+	}
+	resp, err := OrganizationSvcSvc.AddOrganization(c, p)
+	c.JSON(resp, err)
+}
+
+func organizationSvcUpdateOrganization(c *bm.Context) {
+	p := new(Organization)
+	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
+		return
+	}
+	resp, err := OrganizationSvcSvc.UpdateOrganization(c, p)
+	c.JSON(resp, err)
+}
+
+func organizationSvcDeleteOrganization(c *bm.Context) {
+	p := new(Organization)
+	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
+		return
+	}
+	resp, err := OrganizationSvcSvc.DeleteOrganization(c, p)
+	c.JSON(resp, err)
+}
+
 // RegisterOrganizationSvcBMServer Register the blademaster route
 func RegisterOrganizationSvcBMServer(e *bm.Engine, server OrganizationSvcBMServer) {
 	OrganizationSvcSvc = server
 	e.GET("/eagle.organization.v1.OrganizationSvc/Ping", organizationSvcPing)
-	e.GET("/organization/:organizationId", organizationSvcGetOrganization)
+	e.GET("/organization", organizationSvcGetOrganization)
+	e.POST("/organization", organizationSvcAddOrganization)
+	e.PUT("/organization", organizationSvcUpdateOrganization)
+	e.DELETE("/organization", organizationSvcDeleteOrganization)
 }
