# service/organization/api/api.swagger.json
@@ -43,9 +43,9 @@
                 ]
             }
         },
-        "/organization/:organizationId": {
+        "/organization": {
             "get": {
-                "summary": "/organization/:organizationId",
+                "summary": "/organization",
                 "responses": {
                     "200": {
                         "description": "A successful response.",
@@ -65,6 +65,119 @@
                         }
                     }
                 },
+                "parameters": [
+                    {
+                        "name": "organizationId",
+                        "in": "query",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "tags": [
+                    "eagle.organization.v1.OrganizationSvc"
+                ]
+            },
+            "delete": {
+                "summary": "/organization",
+                "responses": {
+                    "200": {
+                        "description": "A successful response.",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "code": {
+                                    "type": "integer"
+                                },
+                                "message": {
+                                    "type": "string"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/.google.protobuf.Empty"
+                                }
+                            }
+                        }
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/.eagle.organization.v1.Organization"
+                        }
+                    }
+                ],
+                "tags": [
+                    "eagle.organization.v1.OrganizationSvc"
+                ]
+            },
+            "post": {
+                "summary": "/organization",
+                "responses": {
+                    "200": {
+                        "description": "A successful response.",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "code": {
+                                    "type": "integer"
+                                },
+                                "message": {
+                                    "type": "string"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/.google.protobuf.Empty"
+                                }
+                            }
+                        }
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/.eagle.organization.v1.Organization"
+                        }
+                    }
+                ],
+                "tags": [
+                    "eagle.organization.v1.OrganizationSvc"
+                ]
+            },
+            "put": {
+                "summary": "/organization",
+                "responses": {
+                    "200": {
+                        "description": "A successful response.",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "code": {
+                                    "type": "integer"
+                                },
+                                "message": {
+                                    "type": "string"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/.google.protobuf.Empty"
+                                }
+                            }
+                        }
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/.eagle.organization.v1.Organization"
+                        }
+                    }
+                ],
                 "tags": [
                     "eagle.organization.v1.OrganizationSvc"
                 ]
@@ -72,6 +185,17 @@
         }
     },
     "definitions": {
+        ".eagle.organization.v1.GetOrgReq": {
+            "type": "object",
+            "properties": {
+                "organizationId": {
+                    "type": "string"
+                }
+            },
+            "required": [
+                "organizationId"
+            ]
+        },
         ".eagle.organization.v1.Organization": {
             "type": "object",
             "properties": {
